# can_to_ros

./: .gitignore  CAN_Message_.csv  CMakeLists.txt  README.md  package.xml  radar_traces.rviz  radar_traces_new.rviz  tts.sh
bagfiles/: low_speed_test.bag  medium_speed_test.bag
config/: radar_traces_live.rviz  radar_traces_live_rogue.rviz
data_visualization_tools/: following_real_vehicle.ipynb  following_real_vehicle_th_max.ipynb  velocity_following_test.ipynb  velocity_following_test.py
data_visualization_tools/.ipynb_checkpoints/: following_real_vehicle_with_margin_th_max-checkpoint.ipynb
docs/: messages.md
include/header_package/: .can_decode_test.h.swp  can_decode.h  can_decode_subs_fs.h  can_decode_test.h
launch/: acc_settings.launch  acc_settings_readonly.launch  accel_commands.launch  accel_decel_cmds.launch  cancoach_experiment_starter.launch  catvehicle.launch  cbf_accel_check.launch  cbf_vsl.launch  cbftest.launch  cbftest_simulink.launch  cbftest_v2.launch  cbftest_with_error.launch  delay_brake_test.launch  explicit_cruise_planner_readonly.launch  explicitaccel.launch  explicitaccel_microaccel_readonly.launch  followerstopper_test.launch  ghost_mode.launch  init_ghost_mode.launch  joytesing.launch  microaccel_cruise_noplanner_readonly.launch  microaccel_cruise_planner_readonly.launch  nissan_bare.launch  nissan_interface.launch  nissan_side_radar_test.launch  pid_controller.launch  piping.launch  publish_can_msg.launch  real_vehicle_test_A.launch  real_vehicle_test_B.launch  rl_blind_cruise_planner_readonly.launch  rl_cruise_accel_planner_readonly.launch  rl_cruise_hybrid_noplanner_readonly.launch  rl_cruise_hybrid_planner_readonly.launch  rl_cruise_noplanner_readonly.launch  rl_cruise_planner_readonly.launch  robotviz_tf.launch  rogue_radar_test.launch  rosbag_replay.launch  rviz_live.launch  (+23 more)
msg/: can_msgs.msg  headlights.msg
scripts/: README.md  can_coach.py  can_coach_subs.py  can_decode_base.h  can_decode_test.h  findMyDBC.sh  generateDecode_Subs.py  hello_speed.py  honda_pilot.json  insert_lines_nissan_interface.py  insert_lines_vanilla_vehicle_interface.py  kalmanTracking.py  listener.py  liveRadar.py  makeSignalsJSON.py  nissan_rogue.json  node_status.py  pub_check.py  regen_vehicle_interface.sh  regenerateCanToRos.sh  selector.py  speed_talker.py  topic_check.py  toyota_hybrid.json  toyota_rav4.json
src/: accel_node.cpp  can_msg_decoder.cpp  cbf_smoother.cpp  cmd_accel_decel.cpp  commandDuration.cpp  commandDurationDelayed.cpp  cruise_start_safety_check.cpp  cut_in_disengager.cpp  director.cpp  gps_node.cpp  gpsfix.cpp  joyNode.cpp  lead_info.cpp  leaddist_node.cpp  my_frame.cpp  nissan_target_speed_to_acc_buttons.cpp  node1.cpp  node10.cpp  node11.cpp  node12.cpp  node13.cpp  node14.cpp  node15.cpp  node2.cpp  node3.cpp  node4.cpp  node5.cpp  node6.cpp  node7.cpp  node8.cpp  node9.cpp  packages_version.sh  panda_csv_record.sh  piping.sh  proto.cpp  publishCommands.cpp  publishCommandsFS.cpp  publish_csv.cpp  publish_libpanda.cpp  ramp.cpp  (+48 more)
urdf/: catvehicle.xacro
